# mcp-fabric

./: .gitignore  README.md  README.md.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
mcp_fabric/: server.py
tests/: test_import.py  test_server.py
